fix(site): input focus border on dark mode

--- a/doc_root/assets/css/master.css
+++ b/doc_root/assets/css/master.css
@@ -249,7 +249,7 @@ nav ul li a:hover {
 
     input[type="number"], input[type="date"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], input[type="email"], select, textarea {
         background-color: var(--light-grey) !important;
-        border: 1px solid var(--light-border) !important;
+        border-color: var(--light-border);
         color: var(--white) !important;
     }
 
